Add some basic classes

--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="F:/Programming/Libraries/Guava/26.0/guava-26.0-jre.jar" sourcepath="F:/Programming/Libraries/Guava/26.0/guava-26.0.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
